k8s-jenkins-sonar-nexus/ansible/roles/nexus/files/dep-nexus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-deployment
  namespace: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: sonatype/nexus3
        ports:
        - name: nexus-port
          containerPort: 8081
        - name: docker-port
          containerPort: 20000
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-pvc
