k8s-jenkins-sonar-nexus/ansible/roles/nexus/files/svc-nexus.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
  labels:
    app: nexus
spec:
  selector:
    app: nexus
  type: LoadBalancer
#  loadBalancerIP: 192.168.56.254
  ports:
  - name: nexus-svc
    protocol: TCP
    port: 8081
    targetPort: nexus-port
  - name: nexus-docker
    protocol: TCP
    port: 20000
    targetPort: docker-port
