k8s-jenkins-sonar-nexus/ansible/roles/nexus/files/ing-nexus.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
spec:
  rules:
  - host: nexus
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: nexus-svc
  - host: docker.nexus
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-service
          servicePort: nexus-docker
